apps/_template/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    gateway.edinstance.com/route-access: "true"
