apps/_template/service.yml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  namespace: apps
  labels:
    app.kubernetes.io/name: SERVICE_NAME
spec:
  selector:
    app.kubernetes.io/name: SERVICE_NAME
  ports:
    - name: http
      port: 80
      targetPort: http
