apps/_template/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: SERVICE_NAME
  namespace: apps
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-system
  hostnames:
    - SERVICE_HOST_LOCAL
  rules:
    - backendRefs:
        - name: SERVICE_NAME
          port: 80
